# BitFunnel

./: .doozer.json  .gitignore  .travis.yml  CMakeLists.txt  Configure_MSVC.bat  Configure_Make.sh  Configure_Ninja.sh  Configure_XCode.sh  README.md  TODO.md  appveyor.yml  loc.sh
examples/QueryParser/: CMakeLists.txt  main.cpp
examples/Shakespeare/: CMakeLists.txt  Sonnets.cpp  Sonnets.h  main.cpp
src/: CMakeLists.txt
src/Chunks/: CMakeLists.txt
src/Chunks/src/: BuiltinChunkManifest.cpp  BuiltinChunkManifest.h  CMakeLists.txt  ChunkEnumerator.cpp  ChunkEnumerator.h  ChunkFilter.cpp  ChunkFilter.h  ChunkIngestor.cpp  ChunkIngestor.h  ChunkManifestIngestor.cpp  ChunkManifestIngestor.h  ChunkReader.cpp  ChunkReader.h  ChunkTaskProcessor.h  ChunkWriter.cpp  ChunkWriter.h  ChunkWriters.cpp  ChunkWriters.h  Document.cpp  DocumentFilters.cpp  IngestChunks.cpp
src/Chunks/test/: CMakeLists.txt  ChunkEventTracer.h  ChunkReaderTest.cpp  DocumentTest.cpp
src/Common/CmdLineParser/: CMakeLists.txt
src/Common/Configuration/: CMakeLists.txt
src/Common/CsvTsv/: CMakeLists.txt
src/Common/Utilities/: CMakeLists.txt
src/Data/: CMakeLists.txt
src/Data/src/: CMakeLists.txt  Sequential.cpp  SimpleData.cpp  Sonnets.cpp  SyntheticChunks.cpp
src/Index/: CMakeLists.txt
src/Index/UnitTest/: CMakeLists.txt  ChunkReaderUnitTest.cpp  ChunkTaskProcessorUnitTest.cpp  DocTableDescriptorUnitTest.cpp  DocumentDataSchemaUnitTest.cpp  DocumentLengthHistogramUnitTest.cpp  EndToEndTests.cpp  IndexWrapper.cpp  IndexWrapper.h  Placeholder.cpp  RecyclerUnitTest.cpp  RowIdUnitTest.cpp  RowTableDescriptorUnitTest.cpp  ShardUnitTest.cpp  SliceUnitTest.cpp  TrackingSliceBufferAllocator.cpp  TrackingSliceBufferAllocator.h
src/Index/src/: BuiltinChunkManifest.cpp  BuiltinChunkManifest.h  CMakeLists.txt  ChunkEnumerator.cpp  ChunkEnumerator.h  ChunkIngestor.cpp  ChunkIngestor.h  ChunkManifestIngestor.cpp  ChunkManifestIngestor.h  ChunkReader.cpp  ChunkReader.h  ChunkTaskProcessor.cpp  ChunkTaskProcessor.h  Configuration.cpp  Configuration.h  Correlate.cpp  Correlate.h  DocTableDescriptor.cpp  DocTableDescriptor.h  Document.cpp  Document.h  DocumentCache.cpp  DocumentCache.h  DocumentDataSchema.cpp  DocumentDataSchema.h  DocumentFrequencyTable.cpp  DocumentFrequencyTable.h  DocumentFrequencyTableBuilder.cpp  DocumentFrequencyTableBuilder.h  DocumentHandleInternal.cpp  DocumentHandleInternal.h  DocumentHistogram.cpp  DocumentHistogram.h  DocumentHistogramBuilder.cpp  DocumentHistogramBuilder.h  DocumentLengthHistogram.cpp  DocumentLengthHistogram.h  DocumentMap.cpp  DocumentMap.h  FactSetBase.cpp  (+81 more)
src/Index/test/: CMakeLists.txt  ChunkReaderTest.cpp  ChunkReaderUnitTest.cpp  ChunkTaskProcessorTest.cpp  ChunkTaskProcessorUnitTest.cpp  DocTableDescriptorTest.cpp  DocTableDescriptorUnitTest.cpp  DocumentDataSchemaTest.cpp  DocumentDataSchemaUnitTest.cpp  DocumentFrequencyTableTest.cpp  DocumentHandleTest.cpp  DocumentHandleUnitTest.cpp  DocumentLengthHistogramTest.cpp  DocumentLengthHistogramUnitTest.cpp  DocumentTest.cpp  IndexUtils.cpp  IndexUtilsTest.cpp  IndexUtilsUnitTest.cpp  IndexWrapper.h  IngestorTest.cpp  OldOptimalTermTreatments.cpp  OldOptimalTermTreatments.h  OptimalTermTreatments2Test.cpp  OptimalTermTreatmentsTest.cpp  RowConfigurationTest.cpp  RowTableDescriptorTest.cpp  RowTableDescriptorUnitTest.cpp  ShardTest.cpp  ShardUnitTest.cpp  SliceTest.cpp  SliceUnitTest.cpp  TermTableBuilderTest.cpp  TermTableTest.cpp  TermTest.cpp  TermToTextTest.cpp  TermTreatmentOptimalTest.cpp  TermTreatmentsTest.cpp  TrackingSliceBufferAllocator.cpp  TrackingSliceBufferAllocator.h  TreatmentOptimalOld.cpp  (+1 more)
src/Mocks/: CMakeLists.txt
src/Mocks/src/: CMakeLists.txt  PrimeFactorsDocument.cpp  PrimeFactorsDocument.h
src/Mocks/test/: CMakeLists.txt  PrimeFactorsDocumentTest.cpp
src/Plan/: CMakeLists.txt
src/Plan/src/: AbstractRow.cpp  AbstractRowEnumerator.cpp  AbstractRowEnumerator.h  ByteCodeInterpreter.cpp  ByteCodeInterpreter.h  ByteCodeQueryEngine.cpp  ByteCodeQueryEngine.h  CMakeLists.txt  CacheLineRecorder.cpp  CacheLineRecorder.h  CompileNode.cpp  CompileNode.h  CompileNodeUtilities.h  CompileNodes.cpp  CompileNodes.h  IPlanRows.h  MachineCodeGenerator.cpp  MachineCodeGenerator.h  MatchTreeCodeGenerator.cpp  MatchTreeCodeGenerator.h  (+53 more)
src/Scripts/: README.md  bf-density.r  bf-new  bf-old  cachelines.py  compare-docfreqs.py  compare-phrase-speed.py  convert.go  correlation-histogram.py  dependencies.go  endtoend-constants.py  generate-queries-for-threads.py  get-memory-usage.py  get-random-hashes.py  make-phrases.py  match-vs-cachelines.r  multidensity-table.py  multisnr-table.py  per-thread-qps.py  plot-cachelines-vs-time.sh  plot-cachelines.sh  plot-correlations.r  plot-docfreqs.r  plot-history.r  plot-qps.r  plot-qwords.r  plot-sim.r  plot-threads-vs-qps-multiple-treatments.sh  plot-threads-vs-qps.sh  raw_talk.csv  row-correlation.py  run-multidensity.sh  run-multisnr.sh  run-threads-vs-qps-multiple-treatments.sh  sample-csv.py  show-term-convert.py  simulate.cpp  slides.go  sum-cachelines.py  sum-csv-column.py  (+5 more)
test/Shared/: CMakeLists.txt  EmptyTermTable.cpp  EmptyTermTable.h  FakeSliceOwner.cpp  FakeSliceOwner.h  IndexUtils.cpp  IndexUtils.h  MockFileManager.cpp  MockFileManager.h  MockTermTable.cpp  MockTermTable.h  PrivateHeapAllocator.cpp  PrivateHeapAllocator.h  README.md  SameExceptForWhitespace.cpp  SameExceptForWhitespace.h
tools/BitFunnel/: BitFunnelTool.cpp  BitFunnelTool.h  CMakeLists.txt  Commands.h  Environment.h  IExecutable.h  REPL.cpp  REPL.h  StatisticsBuilder.cpp  StatisticsBuilder.h  StatisticsBuilderREADME.md  TaskBase.h  TermTableBuilder.cpp  TermTableBuilder.h  main.cpp
tools/CsvExtract/: CMakeLists.txt  CsvExtract.cpp  CsvExtract.h  CsvExtractTest.cpp  main.cpp
tools/IngestAndQuery/: CMakeLists.txt  Commands.cpp  Commands.h  Environment.cpp  Environment.h  Headers.h  REPL.cpp  REPL.h  TaskBase.h  TaskFactory.cpp  TaskFactory.h  TaskPool.cpp  TaskPool.h  main.cpp
tools/StatisticsBuilder/: CMakeLists.txt  main.cpp
tools/TermTableBuilder/: CMakeLists.txt  main.cpp
(+461 files in other folders)
